--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "webpack --config webpack.prod.js",
     "serve": "http-server dist --port 9000",
     "test": "karma start",
-    "e2e": "codeceptjs run --steps",
+    "e2e": "npx jest",
     "lint": "eslint ./src",
     "build-image": "node sharp.js",
     "build-serve": "npm run build && npm run serve"
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@babel/core": "^7.18.5",
     "@babel/preset-env": "^7.18.2",
+    "@jest/globals": "^29.7.0",
     "babel-loader": "^8.2.5",
     "clean-webpack-plugin": "^4.0.0",
     "codeceptjs": "^3.4.1",
@@ -34,13 +35,15 @@
     "imagemin-webpack-plugin": "^2.4.2",
     "jasmine-ajax": "^4.0.0",
     "jasmine-core": "^4.2.0",
+    "jest": "^29.7.0",
     "karma": "^5.2.3",
     "karma-chrome-launcher": "^3.1.1",
     "karma-firefox-launcher": "^2.1.2",
     "karma-jasmine": "^4.0.2",
     "karma-sourcemap-loader": "^0.3.8",
     "karma-webpack": "^5.0.0",
-    "puppeteer": "^20.1.2",
+    "puppeteer": "^20.9.0",
+    "selenium-webdriver": "^4.16.0",
     "sharp": "^0.32.1",
     "style-loader": "^3.3.1",
     "webpack": "^5.73.0",
